<resources>
    <string name="app_name">Lab2activities</string>
    <string name="ingresar">INGRESAR</string>
    <string name="iniciar">INICIAR SESION</string>
    <string name="registrar">REGISTRARSE</string>
    <string name="stringVacio" />
    <string name="registrar1">Registrar</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nombre_lugar">Nombre de Lugar</string>
    <string name="pequeñaDescription">Pequeña Descripcion</string>
    <string name="puntuacion">Puntuacion</string>
    <string name="infoGeneral">Informacion General</string>
    <string name="sitiosRecomendados">Stios Recomendados</string>
    <string name="temperatura">Temperatura</string>
    <string name="registerPlace">REGISTRAR LUGAR</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="usuario">Usuario</string>
</resources>
