<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gr10.compumovil.udea.edu.co.lab2e10.User">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:id="@+id/textNombre"
        android:textSize="20sp"
        android:textColor="#c24141"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nombre"
        android:layout_below="@+id/textNombre"
        android:textSize="18sp"
        android:textColor="#050505"
        android:textStyle="normal" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textEmail"
        android:layout_below="@+id/nombre"
        android:textSize="20sp"
        android:textColor="#c24141"
        android:textStyle="bold" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:layout_below="@+id/textEmail"
        android:textColor="#050505"
        android:textStyle="normal"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:id="@+id/textUser"
        android:layout_below="@+id/email"
        android:textSize="20sp"
        android:textColor="#c24141"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@+id/textUser"
        android:textColor="#050505"
        android:textStyle="normal"
        android:textSize="18sp" />
</RelativeLayout>
